<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="center" android:id="@+id/addcreditcard_fields" android:padding="@dimen/play_action_button_xpadding" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="horizontal" android:id="@+id/whatsapp_header" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/logotype" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/whatsapp_icon"/>
        <TextView android:textSize="23sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center_vertical" android:id="@+id/logotype_text" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/whatsapp"/>
    </LinearLayout>
    <TextView android:textSize="22sp" android:textColor="@color/black" android:id="@+id/addcreditcard_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/add_credit_card" android:layout_below="@+id/whatsapp_header"/>
    <TextView android:textSize="17sp" android:textColor="@color/black" android:id="@+id/addcreditcard_header_details" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/enter_credit_card" android:layout_below="@+id/addcreditcard_header"/>
    <View android:id="@+id/header_space" android:layout_width="match_parent" android:layout_height="8dp" android:layout_below="@+id/addcreditcard_header_details"/>
    <ImageView android:id="@+id/visa_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/credit_card_logos_left_margin" android:layout_marginTop="8dp" android:src="@drawable/credit_cards_visa" android:layout_below="@+id/header_space"/>
    <ImageView android:id="@+id/mastercard_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="8dp" android:src="@drawable/credit_cards_master" android:layout_toRightOf="@+id/visa_logo" android:layout_below="@+id/header_space"/>
    <ImageView android:id="@+id/amex_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="8dp" android:src="@drawable/credit_cards_amex" android:layout_toRightOf="@+id/mastercard_logo" android:layout_below="@+id/header_space"/>
    <ImageView android:id="@+id/discover_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="8dp" android:src="@drawable/credit_cards_discover" android:layout_toRightOf="@+id/amex_logo" android:layout_below="@+id/header_space"/>
    <ImageView android:id="@+id/jcb_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="8dp" android:src="@drawable/credit_cards_jcb" android:layout_toRightOf="@+id/discover_logo" android:layout_below="@+id/header_space"/>
    <ImageView android:id="@+id/general_logo" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:layout_marginTop="8dp" android:src="@drawable/credit_cards_general" android:layout_below="@+id/header_space"/>
    <exts.whats.billing.CreditCardNumberEditText android:textColor="@color/black" android:id="@+id/cc_box" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:hint="@string/card_number" android:singleLine="true" android:layout_below="@+id/visa_logo" android:inputType="number" android:layerType="hardware" style="@style/Widget.EditText"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/black" android:id="@+id/cc_box_concealed" android:paddingLeft="12dp" android:paddingTop="6dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/credit_card_number_collapsed_left_padding" android:freezesText="true" android:layout_alignBaseline="@+id/cc_box" android:layerType="hardware"/>
    <EditText android:textColor="@color/black" android:id="@+id/expiration_date_entry_1st" android:visibility="visible" android:nextFocusUp="@+id/cc_box" android:nextFocusDown="@+id/expiration_date_entry_2nd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/hint_expiration_month" android:ems="3" android:singleLine="true" android:maxLength="2" android:layout_below="@+id/cc_box" android:inputType="number" android:layerType="hardware"/>
    <TextView android:textColor="@color/black" android:id="@+id/expiration_date_separator" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/expiration_date_separator" android:layout_toRightOf="@+id/expiration_date_entry_1st" android:layout_alignBaseline="@+id/expiration_date_entry_1st" android:layerType="hardware"/>
    <EditText android:textColor="@color/black" android:id="@+id/expiration_date_entry_2nd" android:visibility="visible" android:nextFocusRight="@+id/cvc_entry" android:nextFocusUp="@+id/expiration_date_entry_1st" android:nextFocusDown="@+id/cvc_entry" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/hint_expiration_year" android:ems="3" android:singleLine="true" android:maxLength="2" android:layout_toRightOf="@+id/expiration_date_separator" android:layout_alignBaseline="@+id/expiration_date_entry_1st" android:inputType="number" android:layerType="hardware"/>
    <EditText android:textColor="@color/black" android:id="@+id/cvc_entry" android:visibility="visible" android:nextFocusUp="@+id/expiration_date_entry_2nd" android:nextFocusDown="@+id/name_on_card" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/cvc_code" android:ems="4" android:singleLine="true" android:layout_alignBaseline="@+id/expiration_date_entry_1st" android:layout_alignRight="@+id/cc_box" android:inputType="number" android:layerType="hardware"/>
    <ImageView android:id="@+id/cvc_image" android:background="@drawable/highlight_overlay_light" android:paddingLeft="4dp" android:paddingRight="4dp" android:focusable="true" android:visibility="visible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/cvc_hint" android:layout_toLeftOf="@+id/cvc_entry" android:layout_alignTop="@+id/expiration_date_entry_1st" android:layout_alignBottom="@+id/expiration_date_entry_1st" android:layerType="hardware"/>
    <EditText android:textColor="@color/black" android:id="@+id/name_on_card" android:nextFocusUp="@+id/cvc_entry" android:nextFocusDown="@+id/cc_box" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:hint="@string/name_on_card" android:singleLine="true" android:layout_below="@+id/expiration_date_entry_1st" android:inputType="none|text|textCapWords|textEmailAddress|textShortMessage|textPersonName"/>
</RelativeLayout>
