<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="center" android:id="@+id/vbv_confirmation" android:padding="@dimen/play_action_button_xpadding" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="horizontal" android:id="@+id/whatsapp_header" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/logotype_vbv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/whatsapp_icon"/>
        <TextView android:textSize="23sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center_vertical" android:id="@+id/logotype_text_vbv" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/whatsapp"/>
    </LinearLayout>
    <ImageView android:id="@+id/vbv_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/credit_card_logos_left_margin" android:layout_marginTop="10dp" android:layout_marginRight="@dimen/credit_card_logos_left_margin" android:layout_below="@+id/whatsapp_header" android:layout_centerHorizontal="true"/>
    <EditText android:textColor="@color/black" android:id="@+id/vbv_pass" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/credit_card_logos_left_margin" android:layout_marginTop="10dp" android:layout_marginRight="@dimen/credit_card_logos_left_margin" android:hint="@string/change_password_restrict_label" android:ems="10" android:singleLine="true" android:layout_below="@+id/vbv_logo" android:layout_centerHorizontal="true" android:inputType="textPassword" android:layerType="hardware"/>
    <TextView android:textSize="15sp" android:textColor="@color/credit_card_invalid_text_color" android:id="@+id/error_message_vbv" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/no_connection" android:layout_below="@+id/vbv_pass"/>
</RelativeLayout>
